@@ -1803,15 +1803,16 @@ block|}
 block|}
 annotation|@
 name|Override
-DECL|method|checkDistributed
+DECL|method|prepDistributed
 specifier|public
 name|void
-name|checkDistributed
+name|prepDistributed
 parameter_list|(
 name|ResponseBuilder
 name|rb
 parameter_list|)
 block|{
+specifier|final
 name|SolrQueryRequest
 name|req
 init|=
@@ -1819,6 +1820,7 @@ name|rb
 operator|.
 name|req
 decl_stmt|;
+specifier|final
 name|SolrParams
 name|params
 init|=
@@ -1827,31 +1829,7 @@ operator|.
 name|getParams
 argument_list|()
 decl_stmt|;
-name|rb
-operator|.
-name|isDistrib
-operator|=
-name|params
-operator|.
-name|getBool
-argument_list|(
-literal|"distrib"
-argument_list|,
-name|req
-operator|.
-name|getCore
-argument_list|()
-operator|.
-name|getCoreDescriptor
-argument_list|()
-operator|.
-name|getCoreContainer
-argument_list|()
-operator|.
-name|isZooKeeperAware
-argument_list|()
-argument_list|)
-expr_stmt|;
+specifier|final
 name|String
 name|shards
 init|=
@@ -1864,41 +1842,6 @@ operator|.
 name|SHARDS
 argument_list|)
 decl_stmt|;
-comment|// for back compat, a shards param with URLs like localhost:8983/solr will mean that this
-comment|// search is distributed.
-name|boolean
-name|hasShardURL
-init|=
-name|shards
-operator|!=
-literal|null
-operator|&&
-name|shards
-operator|.
-name|indexOf
-argument_list|(
-literal|'/'
-argument_list|)
-operator|>
-literal|0
-decl_stmt|;
-name|rb
-operator|.
-name|isDistrib
-operator|=
-name|hasShardURL
-operator||
-name|rb
-operator|.
-name|isDistrib
-expr_stmt|;
-if|if
-condition|(
-name|rb
-operator|.
-name|isDistrib
-condition|)
-block|{
 comment|// since the cost of grabbing cloud state is still up in the air, we grab it only
 comment|// if we need it.
 name|ClusterState
@@ -2675,7 +2618,6 @@ operator|.
 name|toString
 argument_list|()
 expr_stmt|;
-block|}
 block|}
 block|}
 block|}
